# staker

./: .gitignore  Anchor.toml  README.md  package-lock.json  package.json  tailwind.config.js  tsconfig.json
.bmad-core/: install-manifest.yaml
docs/: architecture.md  prd.md
docs/architecture/: index.md  (+20 more)
programs/anchor-spl-stake-pool/: Cargo.toml
programs/anchor-spl-stake-pool/src/: lib.rs  utils.rs
programs/anchor-spl-stake-pool/src/instructions/: add_validator_to_pool.rs  cleanup_removed_validator_entries.rs  create_token_metadata.rs  decrease_additional_validator_stake.rs  decrease_additional_validator_stake_with_list.rs  decrease_additional_validator_stake_with_vote.rs  decrease_validator_stake.rs  decrease_validator_stake_with_reserve.rs  decrease_validator_stake_with_vote.rs  deposit_sol.rs  deposit_sol_with_slippage.rs  deposit_stake.rs  deposit_stake_with_slippage.rs  increase_additional_validator_stake.rs  increase_additional_validator_stake_with_list.rs  increase_additional_validator_stake_with_vote.rs  increase_validator_stake.rs  increase_validator_stake_with_vote.rs  initialize.rs  mod.rs  remove_validator_from_pool.rs  set_fee.rs  set_funding_authority.rs  set_manager.rs  set_preferred_validator.rs  set_staker.rs  update_stake_pool_balance.rs  update_token_metadata.rs  update_validator_list_balance.rs  withdraw_sol.rs  withdraw_sol_with_slippage.rs  withdraw_stake.rs  withdraw_stake_with_slippage.rs
src/: App.tsx  index.css  main.tsx
staker-frontend/: .gitignore  package-lock.json  package.json  vite.config.ts
tests/: anchor-spl-stake-pool.ts
(+33 files in other folders)
